tests/snapshots/integration__integration_tests__help__help_list_statusline.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - list
    - statusline
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_EDITOR: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WT_TEST_DELAYED_STREAM_MS: "-1"
    WT_TEST_EPOCH: "1735776000"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt list statusline - Single-line status for shell prompts

For shell prompts, starship, or editor integrations.

Usage: [1m[36mwt list statusline[0m [36m[OPTIONS]

[1m[32mOptions:
      [1m[36m--claude-code
          Claude Code mode: read context from stdin, add directory and model
          
          Reads JSON from stdin with [1m.workspace.current_dir[0m and [1m.model.display_name[0m. Output: [1mdir  branch  status  ±working  commits  upstream  ci  | model[0m

  [1m[36m-h[0m, [1m[36m--help
          Print help (see a summary with '-h')

[1m[32mGlobal Options:
  [1m[36m-C[0m[36m [0m[36m<path>
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m[36m...
          Verbose output (-v: hooks, templates; -vv: debug report)

Format: [2mbranch  status  ±working  commits  upstream  ci
