tests/snapshots/integration__integration_tests__help__help_page_no_subcommand.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - "--help-page"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    RUST_LOG: warn
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Usage: wt <command> --help-page
Commands with pages: merge, switch, remove, list
